# cognitiv-coding-challenges

dna/: CMakeLists.txt  Chromosome_Comparer.cpp  Chromosome_Comparer.hpp  Chromosome_Comparison.cpp  Chromosome_Comparison.hpp  DNA_Stream.cpp  DNA_Stream.hpp  Person.cpp  Person.hpp  README.md  String_Comparer.cpp  String_Comparer.hpp  Transformation.cpp  Transformation.hpp  base.hpp  binary_traits.hpp  byte_view.hpp  sequence_buffer.hpp
dna/test/: CMakeLists.txt  Chromosome_Comparer_test.cpp  Person_test.cpp  String_Comparer_test.cpp  fake_person.hpp  fake_stream.cpp  fake_stream.hpp  fake_stream_test.cpp  sequence_buffer_test.cpp
